commit translated contents

--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -6,12 +6,12 @@ ms.author: riande
 ms.custom: mvc
 ms.date: 10/03/2019
 uid: migration/22-to-30
-ms.openlocfilehash: 5468dc9cc75cce67192c7b95acaff0c21f62f44a
-ms.sourcegitcommit: 4649814d1ae32248419da4e8f8242850fd8679a5
+ms.openlocfilehash: 8f598a88f6a81b19c3e82d8a9e5ee0b71628fcc6
+ms.sourcegitcommit: 6d26ab647ede4f8e57465e29b03be5cb130fc872
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 10/05/2019
-ms.locfileid: "71975648"
+ms.lasthandoff: 10/07/2019
+ms.locfileid: "71999866"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer de ASP.NET Core 2,2 à 3,0
 
@@ -179,7 +179,7 @@ The specified framework 'Microsoft.AspNetCore.App', version '3.0.0' was not foun
   - No frameworks were found.
 ```
 
-`Microsoft.AspNetCore.App` est l’infrastructure partagée contenant le runtime ASP.NET Core et est uniquement présente sur l’image de l’ancrage [dotnet/Core/ASPNET](https://hub.docker.com/_/microsoft-dotnet-core-aspnet/) .  Le kit de développement logiciel (SDK) 3,0 réduit la taille des builds dépendantes de l’infrastructure à l’aide de asp.net core en n’incluant pas de copies en double des bibliothèques disponibles dans le Framework partagé.  Il s’agit d’une économie potentielle allant jusqu’à ~ 18MB, mais elle nécessite que le runtime ASP.NET Core soit présent/installé pour exécuter l’application.
+`Microsoft.AspNetCore.App` est l’infrastructure partagée contenant le runtime ASP.NET Core et est uniquement présente sur l’image de l’ancrage [dotnet/Core/ASPNET](https://hub.docker.com/_/microsoft-dotnet-core-aspnet/) .  Le kit de développement logiciel (SDK) 3,0 réduit la taille des builds dépendantes de l’infrastructure à l’aide de asp.net core en n’incluant pas de copies en double des bibliothèques disponibles dans le Framework partagé.  Il s’agit d’une économie potentielle pouvant atteindre 18 Mo, mais exige que le runtime ASP.NET Core soit présent/installé pour exécuter l’application.
 
 Pour déterminer si l’application a une dépendance (directe ou indirecte) sur le ASP.NET Core Framework partagé, examinez le fichier *runtimeconfig. JSON* généré pendant une génération/publication de votre application. Le fichier JSON suivant illustre une dépendance sur le ASP.NET Core Framework partagé :
 
@@ -373,7 +373,7 @@ Pour plus d’informations, consultez [[Announcement] AllowSynchronousIO disable
 
 ### <a name="microsoftaspnetcoreserverkestrelhttps-assembly-removed"></a>Assembly Microsoft. AspNetCore. Server. Kestrel. https supprimé
 
-Dans ASP.NET Core 2,1, le contenu de *Microsoft. AspNetCore. Server. Kestrel. https. dll* a été déplacé vers *Microsoft. AspNetCore. Server. Kestrel. Core. dll*. Il s’agissait d’une mise à jour sans rupture utilisant des attributs `TypeForwardedTo`. Pour 3,0, l’assembly vide *Microsoft. AspNetCore. Server. Kestrel. https. dll* (et le package NuGet) a été supprimé.
+Dans ASP.NET Core 2,1, le contenu de *Microsoft. AspNetCore. Server. Kestrel. https. dll* a été déplacé vers *Microsoft. AspNetCore. Server. Kestrel. Core. dll*. Il s’agissait d’une mise à jour sans rupture utilisant des attributs `TypeForwardedTo`. Pour 3,0, l’assembly vide *Microsoft. AspNetCore. Server. Kestrel. https. dll* et le package NuGet ont été supprimés.
 
 Les bibliothèques référençant [Microsoft. AspNetCore. Server. Kestrel. https](https://www.nuget.org/packages/Microsoft.AspNetCore.Server.Kestrel.Https) doivent mettre à jour les dépendances de ASP.NET Core à 2,1 ou une version ultérieure.
 
@@ -1038,7 +1038,32 @@ Si vous utilisez des fonctionnalités de `Newtonsoft.Json` qui ne sont pas prise
 
 ## <a name="opt-in-to-runtime-compilation"></a>Accepter la compilation au moment de l’exécution
 
-Dans 3,0, la compilation du runtime est un scénario d’abonnement. Pour activer la compilation au moment de l’exécution, consultez <xref:mvc/views/view-compilation#runtime-compilation>.
+Avant ASP.NET Core 3,0, la compilation du runtime des vues était une fonctionnalité implicite de l’infrastructure. La compilation Runtime complète la compilation des vues au moment de la génération. Il permet à l’infrastructure de compiler des vues et des pages Razor (fichiers *. cshtml* ) quand les fichiers sont modifiés, sans avoir à régénérer l’application entière. Cette fonctionnalité prend en charge le scénario d’apport d’une modification rapide dans l’IDE et d’actualisation du navigateur pour afficher les modifications.
+
+Dans ASP.NET Core 3,0, la compilation du runtime est un scénario d’abonnement. La compilation au moment de la génération est le seul mécanisme pour la compilation de la vue qui est activée par défaut. Le runtime s’appuie sur Visual Studio ou [dotnet-Watch](xref:tutorials/dotnet-watch) dans Visual Studio code pour régénérer le projet lorsqu’il détecte des modifications apportées aux fichiers *. cshtml* . Dans Visual Studio, les modifications apportées aux fichiers *. cs*, *. cshtml*ou *. Razor* dans le projet en cours d’exécution (<kbd>CTRL + F5</kbd>), mais pas débogués (<kbd>F5</kbd>), déclenchent la recompilation du projet.
+
+Pour activer la compilation au moment de l’exécution dans votre projet ASP.NET Core 3,0 :
+
+1. Installer le package NuGet [Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation](https://www.nuget.org/packages/Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation).
+1. Mettez à jour `Startup.ConfigureServices` pour appeler `AddRazorRuntimeCompilation` :
+
+    Pour ASP.NET Core MVC, utilisez le code suivant :
+
+    ```csharp
+    services.AddControllersWithViews()
+        .AddRazorRuntimeCompilation(...);
+    ```
+ 
+    Pour ASP.NET Core Razor Pages, utilisez le code suivant :
+ 
+    ```csharp
+    services.AddRazorPages()
+        .AddRazorRuntimeCompilation(...);
+    ```
+ 
+L’exemple à https://github.com/aspnet/samples/tree/master/samples/aspnetcore/mvc/runtimecompilation montre un exemple d’activation conditionnelle de la compilation au moment de l’exécution dans les environnements de développement.
+
+Pour plus d’informations sur la compilation de fichiers Razor, consultez <xref:mvc/views/view-compilation>.
 
 ## <a name="migrate-libraries-via-multi-targeting"></a>Migrer des bibliothèques via le multi-ciblage
 
@@ -1071,7 +1096,7 @@ Utilisez `#ifdefs` pour activer ASP.NET Core API spécifiques à 3,0 :
 var webRootFileProvider =
 #if NETCOREAPP3_0
     GetRequiredService<IWebHostEnvironment>().WebRootFileProvider;
-#else if NETSTANDARD2_0
+#elif NETSTANDARD2_0
     GetRequiredService<IHostingEnvironment>().WebRootFileProvider;
 #else
 #error unknown target framework
