--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -4,14 +4,14 @@ author: rick-anderson
 description: Découvrez comment migrer un projet ASP.NET Core 2,2 vers ASP.NET Core 3,0.
 ms.author: riande
 ms.custom: mvc
-ms.date: 10/03/2019
+ms.date: 10/08/2019
 uid: migration/22-to-30
-ms.openlocfilehash: 8f598a88f6a81b19c3e82d8a9e5ee0b71628fcc6
-ms.sourcegitcommit: 6d26ab647ede4f8e57465e29b03be5cb130fc872
-ms.translationtype: MT
+ms.openlocfilehash: e9a4fed88a7ed2d0347704987b3f1c2fede31ec3
+ms.sourcegitcommit: 73a451e9a58ac7102f90b608d661d8c23dd9bbaf
+ms.translationtype: HT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 10/07/2019
-ms.locfileid: "71999866"
+ms.lasthandoff: 10/08/2019
+ms.locfileid: "72037504"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer de ASP.NET Core 2,2 à 3,0
 
@@ -34,6 +34,18 @@ Cet article explique comment mettre à jour un projet ASP.NET Core 2,2 existant 
 [!INCLUDE[](~/includes/net-core-prereqs-mac-3.0.md)]
 
 ---
+
+## <a name="update-net-core-sdk-version-in-globaljson"></a>Mettre à jour la version du SDK .NET Core dans global.json
+
+Si votre solution repose sur un fichier [global. JSON](/dotnet/core/tools/global-json) pour cibler une version spécifique de kit SDK .net Core, mettez à jour sa propriété `version` sur la version 3,0 installée sur votre ordinateur :
+
+```json
+{
+  "sdk": {
+    "version": "3.0.100"
+  }
+}
+```
 
 ## <a name="update-the-project-file"></a>Mettre à jour le fichier projet
 
