commit translated contents

--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -6,12 +6,12 @@ ms.author: riande
 ms.custom: mvc
 ms.date: 10/08/2019
 uid: migration/22-to-30
-ms.openlocfilehash: e9a4fed88a7ed2d0347704987b3f1c2fede31ec3
-ms.sourcegitcommit: 73a451e9a58ac7102f90b608d661d8c23dd9bbaf
+ms.openlocfilehash: 509f3d7be032bef0c993e8f3dfa5dad52629b114
+ms.sourcegitcommit: fcdf9aaa6c45c1a926bd870ed8f893bdb4935152
 ms.translationtype: HT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 10/08/2019
-ms.locfileid: "72037504"
+ms.lasthandoff: 10/09/2019
+ms.locfileid: "72165410"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer de ASP.NET Core 2,2 à 3,0
 
@@ -53,13 +53,46 @@ Si votre solution repose sur un fichier [global. JSON](/dotnet/core/tools/global
 
 ASP.NET Core 3,0 et versions ultérieures s’exécutent uniquement sur .NET Core. Définissez le [moniker du Framework cible (TFM)](/dotnet/standard/frameworks) sur `netcoreapp3.0` :
 
-```xml
-<TargetFramework>netcoreapp3.0</TargetFramework>
-```
+[!code-xml[](22-to-30/samples/Web1.csproj?highlight=4)]
 
 ### <a name="remove-obsolete-package-references"></a>Supprimer les références de package obsolètes
 
-ASP.NET Core ne produit plus un grand nombre de fonctionnalités de packages NuGet. Ces références de package doivent être supprimées de votre fichier projet. Pour afficher la liste complète des packages qui ne sont plus produits, voir ci-dessous :
+ASP.NET Core ne produit plus un grand nombre de fonctionnalités de packages NuGet. Ces références de package doivent être supprimées de votre fichier projet. Par exemple, le fichier projet généré par modèle pour une application Web ASP.NET Core 2,2 :
+
+```xml
+<Project Sdk="Microsoft.NET.Sdk.Web">
+
+  <PropertyGroup>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
+  </PropertyGroup>
+
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.App"/>
+    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+  </ItemGroup>
+
+</Project>
+```
+
+Fichier de projet ASP.NET Core 3,0 mis à jour :
+
+[!code-xml[](22-to-30/samples/Web1.csproj?highlight=4)]
+
+Fichier de projet ASP.NET Core 3,0 mis à jour :
+
+* Dans la `<PropertyGroup>` :
+
+  * Met à jour TFM sur `netcoreapp3.0`
+  * Supprime l’élément `<AspNetCoreHostingModel>`. Pour plus d’informations, consultez [modèle d’hébergement in-process](#in-process-hosting-model) dans ce document.
+
+* Dans la `<ItemGroup>` :
+
+  * `Microsoft.AspNetCore.App` est supprimé. Pour plus d’informations, consultez Référence de l' [infrastructure](#framework-reference) dans ce document.
+  * `Microsoft.AspNetCore.Razor.Design` est supprimée et la liste suivante de packages n’est plus produite.
+
+Pour afficher la liste complète des packages qui ne sont plus produits, sélectionnez la liste de développement suivante :
 
 <details>
     <summary>Cliquez ici pour développer la liste des packages qui ne sont plus produits</summary>
@@ -216,6 +249,10 @@ Si votre application utilise la station d’accueil, utilisez une image de base 
 
 ASP.NET Core 3,0 supprime certains assemblys qui faisaient auparavant partie de la référence de package `Microsoft.AspNetCore.App`. Pour continuer à utiliser les fonctionnalités fournies par ces assemblys, référencez les versions 3,0 des packages correspondants :
 
+* Une application Web générée par modèle avec des **comptes d’utilisateur individuels** nécessite l’ajout des packages suivants :
+
+  [!code-xml[](22-to-30/samples/WebFull.csproj?highlight=9-13)]
+
 * [Microsoft. EntityFrameworkCore](https://www.nuget.org/packages/Microsoft.EntityFrameworkCore)
 
   Pour plus d’informations sur le référencement du package spécifique au fournisseur de base de données, consultez [fournisseurs de bases de données](/ef/core/providers/index).
@@ -244,6 +281,26 @@ ASP.NET Core 3,0 supprime certains assemblys qui faisaient auparavant partie de 
 * La compilation du runtime Razor &ndash; la prise en charge de la compilation des vues et des pages Razor fait désormais partie de [Microsoft. AspNetCore. Mvc. Razor. RuntimeCompilation](https://www.nuget.org/packages/Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation).
 
 * Prise en charge de MVC `Newtonsoft.Json` &ndash; la prise en charge de l’utilisation de MVC avec `Newtonsoft.Json` fait désormais partie de [Microsoft. AspNetCore. Mvc. NewtonsoftJson](https://www.nuget.org/packages/Microsoft.AspNetCore.Mvc.NewtonsoftJson).
+
+## <a name="startup-changes"></a>Modifications au démarrage
+
+L’illustration suivante montre les lignes supprimées et modifiées dans une application Web ASP.NET Core 2,2 Razor Pages :
+
+![lignes supprimées et modifiées dans une application Web Razor ASP.NET Core 2,2](22-to-30/_static/startup2.2.png)
+
+Dans l’image précédente, le code supprimé est affiché en rouge. Le code supprimé n’affiche pas le code des options de cookie, qui a été supprimé avant la comparaison des fichiers.
+
+L’illustration suivante montre les lignes ajoutées et modifiées dans une application Web ASP.NET Core 3,0 Razor Pages :
+
+![lignes ajoutées et modifiées dans une application Web Razor ASP.NET Core 3,0](22-to-30/_static/startup3.0.png)
+
+Dans l’image précédente, le code ajouté est affiché en vert. Pour plus d’informations sur les modifications suivantes :
+
+* `services.AddMvc` à `services.AddRazorPages`, consultez [inscription du service MVC](#mvc-service-registration) dans ce document.
+* `CompatibilityVersion`, consultez <xref:mvc/compatibility-version>.
+* `IHostingEnvironment` à `IWebHostEnvironment`, consultez [cette annonce GitHub](https://github.com/aspnet/AspNetCore/issues/7749).
+* `app.UseAuthorization` a été ajouté aux modèles pour montrer que l’intergiciel d’autorisation de commande doit être ajouté. Si l’application n’utilise pas l’autorisation, vous pouvez supprimer l’appel à `app.UseAuthorization` en toute sécurité.
+* `app.UseEndpoints`, consultez [Razor pages](#razor-pages) ou [migrer Startup. configure](#migrate-startupconfigure) dans ce document.
 
 ### <a name="analyzer-support"></a>Prise en charge de l’analyseur
 
@@ -1114,6 +1171,10 @@ var webRootFileProvider =
 #error unknown target framework
 #endif
 ```
+
+### <a name="publish"></a>Publier
+
+Supprimez les dossiers *bin* et *obj* dans le répertoire du projet.
 
 <a name="break"></a>
 
