commit translated contents

--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -4,14 +4,14 @@ author: rick-anderson
 description: Découvrez comment migrer un projet ASP.NET Core 2,2 vers ASP.NET Core 3,0.
 ms.author: riande
 ms.custom: mvc
-ms.date: 10/08/2019
+ms.date: 10/15/2019
 uid: migration/22-to-30
-ms.openlocfilehash: 55eec5a6428d8f5de8847dc2cd92b33c86b0feb6
-ms.sourcegitcommit: c452e6af92e130413106c4863193f377cde4cd9c
+ms.openlocfilehash: 89f9f86cf0550c84ed51e7f36c7bc76a4623e7ae
+ms.sourcegitcommit: dd026eceee79e943bd6b4a37b144803b50617583
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 10/10/2019
-ms.locfileid: "72246466"
+ms.lasthandoff: 10/15/2019
+ms.locfileid: "72378794"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer de ASP.NET Core 2,2 à 3,0
 
@@ -19,7 +19,7 @@ Par [Scott Addie](https://github.com/scottaddie) et [Rick Anderson](https://twit
 
 Cet article explique comment mettre à jour un projet ASP.NET Core 2,2 existant vers ASP.NET Core 3,0.
 
-## <a name="prerequisites"></a>Prérequis
+## <a name="prerequisites"></a>Configuration requise
 
 # <a name="visual-studiotabvisual-studio"></a>[Visual Studio](#tab/visual-studio)
 
@@ -376,7 +376,7 @@ public static void Main(string[] args)
 
 ### <a name="connection-middleware-replaces-connection-adapters"></a>L’intergiciel de connexion remplace les adaptateurs de connexion
 
-Les adaptateurs de connexion (<xref:Microsoft.AspNetCore.Server.Kestrel.Core.Adapter.Internal.IConnectionAdapter>) ont été supprimés de Kestrel. Remplacer les adaptateurs de connexion par un intergiciel de connexion. L’intergiciel de connexion est similaire à l’intergiciel (middleware) HTTP dans le pipeline ASP.NET Core, mais pour les connexions de niveau inférieur. Journalisation HTTPs et connexion :
+Les adaptateurs de connexion (`Microsoft.AspNetCore.Server.Kestrel.Core.Adapter.Internal.IConnectionAdapter`) ont été supprimés de Kestrel. Remplacer les adaptateurs de connexion par un intergiciel de connexion. L’intergiciel de connexion est similaire à l’intergiciel (middleware) HTTP dans le pipeline ASP.NET Core, mais pour les connexions de niveau inférieur. Journalisation HTTPs et connexion :
 
 * Ont été déplacés des adaptateurs de connexion vers l’intergiciel de connexion.
 * Ces méthodes d’extension fonctionnent comme dans les versions précédentes de ASP.NET Core. 
@@ -389,7 +389,7 @@ La couche de transport Kestrel a été exposée en tant qu’interface publique 
 
 * `Microsoft.AspNetCore.Server.Kestrel.Transport.Abstractions` et les types associés ont été supprimés.
 * <xref:Microsoft.AspNetCore.Server.Kestrel.KestrelServerOptions.NoDelay> a été déplacé de <xref:Microsoft.AspNetCore.Server.Kestrel.Core.ListenOptions> vers les options de transport.
-* <xref:Microsoft.AspNetCore.Server.Kestrel.Transport.Abstractions.Internal.SchedulingMode> a été supprimé de <xref:Microsoft.AspNetCore.Server.Kestrel.KestrelServerOptions>.
+* `Microsoft.AspNetCore.Server.Kestrel.Transport.Abstractions.Internal.SchedulingMode` a été supprimé de <xref:Microsoft.AspNetCore.Server.Kestrel.KestrelServerOptions>.
 
 Pour plus d’informations, consultez les ressources GitHub suivantes :
 
@@ -492,7 +492,7 @@ Pour utiliser Json.NET dans un projet ASP.NET Core 3,0 :
 
 ASP.NET Core 3,0 ajoute de nouvelles options pour l’inscription des scénarios MVC dans `Startup.ConfigureServices`.
 
-Trois nouvelles méthodes d’extension de niveau supérieur liées aux scénarios MVC sur `IServiceCollection` sont disponibles. Les modèles utilisent ces nouvelles méthodes au lieu de `UseMvc`. Toutefois, `AddMvc` continue à se comporter comme dans les versions précédentes.
+Trois nouvelles méthodes d’extension de niveau supérieur liées aux scénarios MVC sur `IServiceCollection` sont disponibles. Les modèles utilisent ces nouvelles méthodes au lieu de `AddMvc`. Toutefois, `AddMvc` continue à se comporter comme dans les versions précédentes.
 
 L’exemple suivant ajoute la prise en charge des contrôleurs et des fonctionnalités liées à l’API, mais pas aux vues ou aux pages. Le modèle d’API utilise ce code :
 
@@ -681,7 +681,7 @@ public class MyController : ControllerBase
 }
 ```
 
-#### <a name="authorization"></a>Authorization
+#### <a name="authorization"></a>Autorisation
 
 Dans les versions antérieures de ASP.NET Core, la prise en charge de l’autorisation a été fournie via l’attribut `[Authorize]`. L’intergiciel d’autorisation n’est pas disponible. Dans ASP.NET Core 3,0, l’intergiciel (middleware) d’autorisation est requis. Nous vous recommandons de placer le ASP.NET Core middleware d’autorisation (`UseAuthorization`) immédiatement après `UseAuthentication`. L’intergiciel d’autorisation peut également être configuré avec une stratégie par défaut, qui peut être remplacée.
 
@@ -915,7 +915,7 @@ public void Configure(IApplicationBuilder app)
 
 #### <a name="async-suffix-removal-from-controller-action-names"></a>Suppression du suffixe Async des noms d’action du contrôleur
 
-Dans ASP.NET Core 3,0, ASP.NET Core MVC supprime le suffixe `Async` des noms d’action du contrôleur. Le routage et la génération de liens sont affectés par cette nouvelle valeur par défaut. Exemple :
+Dans ASP.NET Core 3,0, ASP.NET Core MVC supprime le suffixe `Async` des noms d’action du contrôleur. Le routage et la génération de liens sont affectés par cette nouvelle valeur par défaut. Exemple :
 
 ```csharp
 public class ProductsController : Controller
@@ -931,7 +931,7 @@ public class ProductsController : Controller
 Avant ASP.NET Core 3,0 :
 
 * L’action précédente est accessible à l’itinéraire *Products/ListAsync* .
-* Génération de lien requise spécifiant le suffixe `Async`. Exemple :
+* Génération de lien requise spécifiant le suffixe `Async`. Exemple :
 
     ```cshtml
     <a asp-controller="Products" asp-action="ListAsync">List</a>
@@ -940,7 +940,7 @@ Avant ASP.NET Core 3,0 :
 Dans ASP.NET Core 3,0 :
 
 * L’action précédente est accessible à l’itinéraire *Products/List* .
-* La génération de liens ne nécessite pas la spécification du suffixe `Async`. Exemple :
+* La génération de liens ne nécessite pas la spécification du suffixe `Async`. Exemple :
 
     ```cshtml
     <a asp-controller="Products" asp-action="List">List</a>
@@ -1141,7 +1141,7 @@ Les bibliothèques doivent souvent prendre en charge plusieurs versions de ASP.N
 * La bibliothèque s’appuie sur une fonctionnalité qui a une [modification avec rupture](#breaking-api-changes)binaire.
 * La bibliothèque veut tirer parti des nouvelles fonctionnalités de ASP.NET Core 3,0. 
 
-Exemple :
+Exemple :
 
 ```xml
 <Project Sdk="Microsoft.NET.Sdk">
