commit translated contents

--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -4,14 +4,14 @@ author: rick-anderson
 description: Découvrez comment migrer un projet ASP.NET Core 2,2 vers ASP.NET Core 3,0.
 ms.author: riande
 ms.custom: mvc
-ms.date: 10/15/2019
+ms.date: 10/18/2019
 uid: migration/22-to-30
-ms.openlocfilehash: 89f9f86cf0550c84ed51e7f36c7bc76a4623e7ae
-ms.sourcegitcommit: dd026eceee79e943bd6b4a37b144803b50617583
+ms.openlocfilehash: 2fad50606fa226eb854ace6870b5a99a39f1d75f
+ms.sourcegitcommit: a166291c6708f5949c417874108332856b53b6a9
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 10/15/2019
-ms.locfileid: "72378794"
+ms.lasthandoff: 10/18/2019
+ms.locfileid: "72589922"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer de ASP.NET Core 2,2 à 3,0
 
@@ -184,7 +184,7 @@ Pour afficher la liste complète des packages qui ne sont plus produits, sélect
 
 ### <a name="framework-reference"></a>Référence du Framework
 
-Les fonctionnalités de ASP.NET Core qui étaient disponibles via l’un des packages répertoriés ci-dessus sont disponibles dans le cadre de l’infrastructure partagée @no__t 0. L' *infrastructure partagée* est l’ensemble d’assemblys (fichiers *. dll* ) qui sont installés sur l’ordinateur et qui comprend un composant d’exécution et un pack de ciblage. Pour plus d’informations, consultez [Le framework partagé](https://natemcmaster.com/blog/2018/08/29/netcore-primitives-2/).
+Les fonctionnalités de ASP.NET Core qui étaient disponibles via l’un des packages répertoriés ci-dessus sont disponibles dans le cadre du `Microsoft.AspNetCore.App` Framework partagé. L' *infrastructure partagée* est l’ensemble d’assemblys (fichiers *. dll* ) qui sont installés sur l’ordinateur et qui comprend un composant d’exécution et un pack de ciblage. Pour plus d’informations, consultez [Le framework partagé](https://natemcmaster.com/blog/2018/08/29/netcore-primitives-2/).
 
 * Les projets qui ciblent le kit de développement logiciel (SDK) `Microsoft.NET.Sdk.Web` référencent implicitement l’infrastructure `Microsoft.AspNetCore.App`.
 
@@ -436,7 +436,7 @@ if (syncIOFeature != null)
 }
 ```
 
-Si vous rencontrez des problèmes avec les implémentations de @no__t 0 ou d’autres flux qui appellent des API synchrones dans [dispose](/dotnet/standard/garbage-collection/implementing-dispose), appelez plutôt la nouvelle API <xref:System.IO.Stream.DisposeAsync*>.
+Si vous rencontrez des problèmes avec les implémentations de <xref:System.IO.TextWriter> ou d’autres flux qui appellent des API synchrones dans [dispose](/dotnet/standard/garbage-collection/implementing-dispose), appelez plutôt la nouvelle API <xref:System.IO.Stream.DisposeAsync*>.
 
 Pour plus d’informations, consultez [[Announcement] AllowSynchronousIO disabled in All Servers (ASPNET/AspNetCore #7644)](https://github.com/aspnet/AspNetCore/issues/7644).
 
@@ -454,7 +454,7 @@ Dans le cadre du travail d' [amélioration du ASP.net Core Framework partagé](h
 
 La valeur par défaut pour ASP.NET Core est désormais [System. Text. JSON](/dotnet/api/system.text.json?view=netcore-3.0), qui est une nouveauté de .net Core 3,0. Envisagez d’utiliser `System.Text.Json` dans la mesure du possible. Elle est très performante et ne nécessite pas de dépendance de bibliothèque supplémentaire. Toutefois, étant donné que `System.Text.Json` est nouveau, il est possible qu’il manque actuellement des fonctionnalités dont votre application a besoin.
 
-Votre application peut nécessiter une intégration `Newtonsoft.Json` si elle utilise @no__t fonctionnalité spécifique à 1 (par exemple, JsonPatch ou Converters) ou si elle [formate](xref:web-api/advanced/formatting) @no__t types spécifiques à 3.
+Votre application peut nécessiter une intégration `Newtonsoft.Json` si elle utilise des fonctionnalités spécifiques à `Newtonsoft.Json` telles que JsonPatch ou Converters, ou si elle [met en forme](xref:web-api/advanced/formatting) des types spécifiques à `Newtonsoft.Json`.
 
 Pour utiliser Json.NET dans un projet ASP.NET Core 3,0 Signalr, consultez [basculer vers Newtonsoft. JSON](#switch-to-newtonsoftjson) dans ce document.
 
@@ -715,7 +715,7 @@ public class HomeController : ControllerBase
 
 Si l’application utilise un `AuthorizeFilter` comme filtre global dans MVC, nous vous recommandons de refactoriser le code pour fournir une stratégie dans l’appel à `AddAuthorization`.
 
-La `DefaultPolicy` est initialement configurée pour exiger l’authentification, de sorte qu’aucune configuration supplémentaire n’est requise. Dans l’exemple suivant, les points de terminaison MVC sont marqués comme étant `RequireAuthorization`, de sorte que toutes les requêtes doivent être autorisées en fonction de la `DefaultPolicy`. Toutefois, le `HomeController` autorise l’accès sans que l’utilisateur se connecte à l’application en raison de la `[AllowAnonymous]` :
+La `DefaultPolicy` est initialement configurée pour exiger l’authentification, de sorte qu’aucune configuration supplémentaire n’est requise. Dans l’exemple suivant, les points de terminaison MVC sont marqués comme étant `RequireAuthorization`, de sorte que toutes les requêtes doivent être autorisées en fonction de la `DefaultPolicy`. Toutefois, l' `HomeController` autorise l’accès sans que l’utilisateur se connecte à l’application en raison d' `[AllowAnonymous]` :
 
 ```csharp
 public void Configure(IApplicationBuilder app)
@@ -777,9 +777,9 @@ public class HomeController : ControllerBase
 }
 ```
 
-Sinon, tous les points de terminaison peuvent être configurés pour exiger l’autorisation sans `[Authorize]` ou `RequireAuthorization` en configurant un `FallbackPolicy`. La `FallbackPolicy` est différente de la `DefaultPolicy`. La `DefaultPolicy` est déclenchée par `[Authorize]` ou `RequireAuthorization`, tandis que le `FallbackPolicy` est déclenché quand aucune autre stratégie n’est définie. `FallbackPolicy` est initialement configuré pour autoriser les demandes sans autorisation.
+Sinon, tous les points de terminaison peuvent être configurés pour exiger une autorisation sans `[Authorize]` ou `RequireAuthorization` en configurant un `FallbackPolicy`. La `FallbackPolicy` est différente de la `DefaultPolicy`. Le `DefaultPolicy` est déclenché par `[Authorize]` ou `RequireAuthorization`, tandis que le `FallbackPolicy` est déclenché quand aucune autre stratégie n’est définie. `FallbackPolicy` est initialement configuré pour autoriser les demandes sans autorisation.
 
-L’exemple suivant est identique à l’exemple précédent `DefaultPolicy`, mais utilise le `FallbackPolicy` pour toujours exiger l’authentification sur tous les points de terminaison, sauf si `[AllowAnonymous]` est spécifié :
+L’exemple suivant est identique à l’exemple précédent `DefaultPolicy` mais utilise le `FallbackPolicy` pour toujours exiger l’authentification sur tous les points de terminaison, sauf lorsque `[AllowAnonymous]` est spécifié :
 
 ```csharp
 public void ConfigureServices(IServiceCollection services)
@@ -885,7 +885,7 @@ Remplacez ce qui suit :
 * `MapRoute` avec `MapControllerRoute`
 * `MapAreaRoute` avec `MapAreaControllerRoute`
 
-Étant donné que le routage inclut désormais une prise en charge de plus que MVC, la terminologie a changé pour indiquer clairement ce qu’ils font. Les itinéraires conventionnels tels que `MapControllerRoute` @ no__t-1 @ no__t-2 @ no__t-3 @ no__t-4 sont appliqués dans l’ordre dans lequel ils sont ajoutés. Placez d’abord des itinéraires plus spécifiques (tels que des itinéraires pour une zone).
+Étant donné que le routage inclut désormais une prise en charge de plus que MVC, la terminologie a changé pour indiquer clairement ce qu’ils font. Les itinéraires conventionnels tels que les `MapControllerRoute` / `MapAreaControllerRoute` / `MapDefaultControllerRoute` sont appliqués dans l’ordre dans lequel ils sont ajoutés. Placez d’abord des itinéraires plus spécifiques (tels que des itinéraires pour une zone).
 
 Dans l’exemple suivant :
 
@@ -1176,6 +1176,29 @@ var webRootFileProvider =
 
 Supprimez les dossiers *bin* et *obj* dans le répertoire du projet.
 
+## <a name="testserver"></a>TestServer
+
+Pour les applications qui utilisent <xref:Microsoft.AspNetCore.TestHost.TestServer> directement avec l' [hôte générique](xref:fundamentals/host/web-host), créez le `TestServer` sur un <xref:Microsoft.AspNetCore.Hosting.IWebHostBuilder> dans <xref:Microsoft.Extensions.Hosting.GenericHostWebHostBuilderExtensions.ConfigureWebHost*> :
+
+```csharp
+[Fact]
+public async Task GenericCreateAndStartHost_GetTestServer()
+{
+    using var host = await new HostBuilder()
+        .ConfigureWebHost(webBuilder =>
+        {
+            webBuilder
+                .UseTestServer()
+                .Configure(app => { });
+        })
+    .StartAsync();
+
+    var response = await host.GetTestServer().CreateClient().GetAsync("/");
+
+    Assert.Equal(HttpStatusCode.NotFound, response.StatusCode);
+}
+```
+
 <a name="break"></a>
 
 ## <a name="breaking-api-changes"></a>Interruption des modifications d’API
@@ -1189,7 +1212,3 @@ Examiner les modifications avec rupture :
 ## <a name="aspnet-core-30-not-currently-available-for-azure-app-service"></a>ASP.NET Core 3,0 pas disponible actuellement pour la Azure App Service
 
 Nous espérons que ce rendez-vous disponible prochainement. Tant que ASP.NET Core 3,0 n’est pas disponible sur Azure App Service, suivez les instructions de la procédure [déployer ASP.net core version préliminaire dans Azure App service](xref:host-and-deploy/azure-apps/index#deploy-aspnet-core-preview-release-to-azure-app-service).
-
-## <a name="mysqldataentityframeworkcore-not-currently-supported-on-aspnet-core-30"></a>MySql. Data. EntityFrameworkCore n’est actuellement pas pris en charge sur ASP.NET Core 3,0
-
-Pour plus d’informations, consultez [ce problème GitHub](https://github.com/aspnet/EntityFrameworkCore/issues/17788).
