commit translated contents

--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -4,14 +4,14 @@ author: rick-anderson
 description: Découvrez comment migrer un projet ASP.NET Core 2,2 vers ASP.NET Core 3,0.
 ms.author: riande
 ms.custom: mvc
-ms.date: 10/18/2019
+ms.date: 10/21/2019
 uid: migration/22-to-30
-ms.openlocfilehash: 2fad50606fa226eb854ace6870b5a99a39f1d75f
-ms.sourcegitcommit: a166291c6708f5949c417874108332856b53b6a9
+ms.openlocfilehash: 39f6b063fcdcb705d0fbb5c480cfdd2c8835308c
+ms.sourcegitcommit: eb4fcdeb2f9e8413117624de42841a4997d1d82d
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 10/18/2019
-ms.locfileid: "72589922"
+ms.lasthandoff: 10/21/2019
+ms.locfileid: "72698011"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer de ASP.NET Core 2,2 à 3,0
 
@@ -1209,6 +1209,6 @@ Examiner les modifications avec rupture :
 * [Interruption des modifications d’API dans anti-contrefaçon, cors, diagnostics, MVC et routage](https://github.com/aspnet/Announcements/issues/387). Cette liste comprend les modifications avec rupture pour les commutateurs de compatibilité.
 * Pour obtenir un résumé des modifications avec rupture 2,2 à 3,0 sur .NET Core, ASP.NET Core et Entity Framework Core, consultez [modifications avec rupture pour la migration de la version 2,2 vers 3,0](/dotnet/core/compatibility/2.2-3.0).
 
-## <a name="aspnet-core-30-not-currently-available-for-azure-app-service"></a>ASP.NET Core 3,0 pas disponible actuellement pour la Azure App Service
+## <a name="net-core-30-on-azure-app-service"></a>.NET Core 3,0 sur Azure App Service
 
-Nous espérons que ce rendez-vous disponible prochainement. Tant que ASP.NET Core 3,0 n’est pas disponible sur Azure App Service, suivez les instructions de la procédure [déployer ASP.net core version préliminaire dans Azure App service](xref:host-and-deploy/azure-apps/index#deploy-aspnet-core-preview-release-to-azure-app-service).
+Pour connaître la progression du déploiement de .NET Core vers Azure App Service, consultez le site Web officiel [.net Core sur app service](https://aspnetcoreon.azurewebsites.net/) . Tant que .NET Core 3,0 n’est pas disponible sur Azure App Service, suivez les instructions de la procédure de [déploiement de la version préliminaire de ASP.net core en Azure App service](xref:host-and-deploy/azure-apps/index#deploy-aspnet-core-preview-release-to-azure-app-service).
