commit translated contents

--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -4,14 +4,14 @@ author: rick-anderson
 description: Découvrez comment migrer un projet ASP.NET Core 2,2 vers ASP.NET Core 3,0.
 ms.author: riande
 ms.custom: mvc
-ms.date: 10/21/2019
+ms.date: 10/22/2019
 uid: migration/22-to-30
-ms.openlocfilehash: 39f6b063fcdcb705d0fbb5c480cfdd2c8835308c
-ms.sourcegitcommit: eb4fcdeb2f9e8413117624de42841a4997d1d82d
+ms.openlocfilehash: 957b57cbd7a1a6fef83a795d5975be08b1621b35
+ms.sourcegitcommit: 810d5831169770ee240d03207d6671dabea2486e
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 10/21/2019
-ms.locfileid: "72698011"
+ms.lasthandoff: 10/22/2019
+ms.locfileid: "72779172"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer de ASP.NET Core 2,2 à 3,0
 
@@ -1031,7 +1031,13 @@ Le code suivant illustre la classe `Program` générée par le modèle ASP.NET C
 
 <xref:Microsoft.AspNetCore.Hosting.IWebHostBuilder> reste dans 3,0 et est le type de la `webBuilder` visible dans l’exemple de code précédent. <xref:Microsoft.AspNetCore.Hosting.WebHostBuilder> sera dépréciée dans une version ultérieure et remplacée par `HostBuilder`.
 
-La modification la plus significative entre `WebHostBuilder` et `HostBuilder` est dans l' [injection de dépendances (di)](xref:fundamentals/dependency-injection). Lorsque vous utilisez `HostBuilder`, vous pouvez uniquement injecter <xref:Microsoft.Extensions.Configuration.IConfiguration> et <xref:Microsoft.AspNetCore.Hosting.IHostingEnvironment> dans le constructeur d' `Startup`. Contraintes d’injection de `HostBuilder` :
+La modification la plus significative entre `WebHostBuilder` et `HostBuilder` est dans l' [injection de dépendances (di)](xref:fundamentals/dependency-injection). Lorsque vous utilisez `HostBuilder`, vous pouvez uniquement injecter les éléments suivants dans le constructeur de `Startup` :
+
+* <xref:Microsoft.Extensions.Configuration.IConfiguration>
+* `Microsoft.Extensions.Hosting.IHostEnvironment`
+* <xref:Microsoft.AspNetCore.Hosting.IWebHostEnvironment>
+
+Contraintes d’injection de `HostBuilder` :
 
 * Autorisez la génération du conteneur DI une seule fois.
 * Évite les problèmes de durée de vie des objets résultants, tels que la résolution de plusieurs instances de singletons.
@@ -1047,10 +1053,18 @@ Les applications qui utilisent à la fois *Microsoft. AspNetCore. Authorization.
 
 Les applications qui n’utilisent pas *Microsoft. AspNetCore. Authorization. Policy. dll* doivent effectuer l’une des opérations suivantes :
 
+* Ajoutez une référence à *Microsoft. AspNetCore. Authorization. Policy. dll*. Cette approche fonctionne pour la plupart des applications et est tout ce qui est nécessaire.
 * Passer à l’utilisation de `AddAuthorizationCore`
-* Ajoutez une référence à *Microsoft. AspNetCore. Authorization. Policy. dll*.
 
 Pour plus d’informations, consultez [modification avec rupture dans `AddAuthorization(o =>`) surcharges dans un autre assembly #386](https://github.com/aspnet/Announcements/issues/386).
+
+## <a name="identity-ui"></a>Interface utilisateur d’identité
+
+Mises à jour de l’interface utilisateur des identités pour ASP.NET Core 3,0 :
+
+* Ajoutez une référence de package à [Microsoft. AspNetCore. Identity. UI](https://nuget.org/packages/Microsoft.AspNetCore.Identity.UI).
+* Les applications qui n’utilisent pas Razor Pages doivent appeler `MapRazorPages`. Consultez [Razor pages](#razor-pages) dans ce document.
+* Bootstrap 4 est l’infrastructure d’interface utilisateur par défaut. Définissez une propriété de projet `IdentityUIFrameworkVersion` pour modifier la valeur par défaut. Pour plus d’informations, consultez [cette annonce GitHub](https://github.com/aspnet/Announcements/issues/380).
 
 ## <a name="signalr"></a>SignalR
 
@@ -1212,3 +1226,4 @@ Examiner les modifications avec rupture :
 ## <a name="net-core-30-on-azure-app-service"></a>.NET Core 3,0 sur Azure App Service
 
 Pour connaître la progression du déploiement de .NET Core vers Azure App Service, consultez le site Web officiel [.net Core sur app service](https://aspnetcoreon.azurewebsites.net/) . Tant que .NET Core 3,0 n’est pas disponible sur Azure App Service, suivez les instructions de la procédure de [déploiement de la version préliminaire de ASP.net core en Azure App service](xref:host-and-deploy/azure-apps/index#deploy-aspnet-core-preview-release-to-azure-app-service).
+AddAuthorization déplacé vers un autre assembly
